test/studies/blas/marybeth/saxpy2.good
Error: Variable 'D' used before defined (saxpy2.chpl:1)
